Add flash success msg

--- a/templates/crud/create.html.twig
+++ b/templates/crud/create.html.twig
@@ -1,9 +1,12 @@
+{% extends '@SherlockodeCrud/crud/layout.html.twig' %}
 {% trans_default_domain 'SherlockodeCrud' %}
 
-{{ form_start(form) }}
-    {% for child in form.children %}
-        {{ form_row(child) }}
-    {% endfor %}
+{% block content %}
+    {{ form_start(form) }}
+        {% for child in form.children %}
+            {{ form_row(child) }}
+        {% endfor %}
 
-    <button type="submit">{{ 'sherlockode_crud.save'|trans }}</button>
-{{ form_end(form) }}
+        <button type="submit">{{ 'sherlockode_crud.save'|trans }}</button>
+    {{ form_end(form) }}
+{% endblock %}
