Add default bundle style + improve ux

--- a/templates/common/grid/grid.html.twig
+++ b/templates/common/grid/grid.html.twig
@@ -42,9 +42,11 @@
                 {% endfor %}
                 {% if gridView.grid.actions is defined and gridView.grid.actions is not empty %}
                     <td>
-                        {% for action in gridView.grid.actions %}
-                            {{ include(action.template) }}
-                        {% endfor %}
+                        <div class="btn-group">
+                            {% for action in gridView.grid.actions %}
+                                {{ include(action.template) }}
+                            {% endfor %}
+                        </div>
                     </td>
                 {% endif %}
             </tr>
