--- a/templates/crud/edit.html.twig
+++ b/templates/crud/edit.html.twig
@@ -7,6 +7,7 @@
             {{ form_row(child) }}
         {% endfor %}
 
-    <button type="submit">{{ 'sherlockode_crud.update'|trans }}</button>
+    <button type="submit">{{ 'sherlockode_crud.save'|trans }}</button>
+    <a href="{{ sherlockode_crud_path_generator(app.request, 'index') }}">{{ 'sherlockode_crud.back'|trans }}</a>
     {{ form_end(form) }}
 {% endblock %}
