--- a/templates/common/grid/_filters.html.twig
+++ b/templates/common/grid/_filters.html.twig
@@ -3,7 +3,7 @@
 {% if gridView.grid.filters is not empty %}
     {% set path = path(app.request.attributes.get('_route'), app.request.attributes.all('_route_params')) %}
 
-    <form method="get">
+    <form method="get" class="filters">
         {% for filter in gridView.grid.filters %}
             {{ sherlockode_crud_render_filter(filter, app.request) }}
         {% endfor %}
